Gallery2: update theme
* Expose icons colors too

Change-Id: If2a7cac0779e20f39fdb3037df9d48581106ef3e
Signed-off-by: Joey Rizzoli <joey@cyanogenmoditalia.it>

--- a/res/values/filtershow_color.xml
+++ b/res/values/filtershow_color.xml
@@ -19,7 +19,7 @@
     <color name="green">#00FF00</color>
     <color name="red">#FF0000</color>
     <color name="blue">#0000FF</color>
-    <color name="text_toolbar">#FFFFFF</color>
+    <color name="text_toolbar">@color/white</color>
     <color name="background_screen">#212121</color>
     <color name="background_toolbar">#363949</color>
     <color name="background_main_toolbar">#232323</color>
@@ -32,20 +32,20 @@
     <color name="filtershow_stateview_end_background">#232323</color>
     <color name="filtershow_stateview_end_text">#a7a7a7</color>
     <color name="filtershow_stateview_background">#464646</color>
-    <color name="filtershow_stateview_text">#FFFFFF</color>
+    <color name="filtershow_stateview_text">@color/white</color>
     <color name="filtershow_stateview_selected_background">#c8c8c8</color>
-    <color name="filtershow_stateview_selected_text">#000000</color>
+    <color name="filtershow_stateview_selected_text">@color/black</color>
     <color name="filtershow_categoryview_background">#1a1a1a</color>
-    <color name="filtershow_categoryview_text">#ffffff</color>
-    <color name="filtershow_category_selection">#ffffffff</color>
-    <color name="gradcontrol_point_center">#ffffffff</color>
-    <color name="gradcontrol_point_edge">#ffffffff</color>
+    <color name="filtershow_categoryview_text">@color/white</color>
+    <color name="filtershow_category_selection">@color/white</color>
+    <color name="gradcontrol_point_center">@color/white</color>
+    <color name="gradcontrol_point_edge">@color/white</color>
     <color name="gradcontrol_graypoint_center">#888888</color>
     <color name="gradcontrol_graypoint_edge">#BBBBBB</color>
     <color name="gradcontrol_point_shadow_start">#66000000</color>
-    <color name="gradcontrol_point_shadow_end">#00000000</color>
-    <color name="gradcontrol_line_color">#FFFFFF</color>
-    <color name="gradcontrol_line_shadow">#000000</color>
+    <color name="gradcontrol_point_shadow_end">@android:color/transparent</color>
+    <color name="gradcontrol_line_color">@color/white</color>
+    <color name="gradcontrol_line_shadow">@color/black</color>
     <color name="draw_rect_border">#888888</color>
     <color name="color_chooser_unslected_border">#3d4040</color>
     <color name="color_chooser_slected_border">#a7a7a7</color>
