--- a/res/layout-land/filtershow_presets_dialog.xml
+++ b/res/layout-land/filtershow_presets_dialog.xml
@@ -30,53 +30,55 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="253dp"
-    android:layout_height="425dp"
+    android:layout_width="424dp"
+    android:layout_height="260dp"
     android:background="#EFEFEF">
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingStart="26dp"
-        android:paddingTop="22dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="22dp"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/icon_tools"
             android:layout_width="21dp"
-            android:layout_height="20dp"
+            android:layout_height="27dp"
             android:src="@drawable/icon_tools"/>
 
         <TextView
             android:id="@+id/dialog_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="11dp"
+            android:paddingStart="8dp"
             android:textColor="#000000"
             android:textSize="16sp"
             android:text="@string/filtershow_dialog_title"/>
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/dialog_content"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="21dp"
-        android:layout_marginEnd="33dp"
-        android:layout_marginTop="22dp"
-        android:textSize="13sp"
-        android:textColor="#000000"
-        android:text="@string/filtershow_dialog_content"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:gravity="center_horizontal"
-        android:layout_marginTop="64dp"
-        android:layout_marginStart="21dp"
-        android:layout_marginEnd="21dp">
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="34dp">
 
+        <TextView
+            android:id="@+id/dialog_content"
+            android:layout_width="128dp"
+            android:layout_height="wrap_content"
+            android:textSize="13sp"
+            android:textColor="#000000"
+            android:text="@string/filtershow_dialog_content"/>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="28dp"
+            android:layout_marginEnd="34dp">
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -122,29 +124,29 @@
                 android:textSize="9sp"
                 android:text="@string/filtershow_dialog_apply_photo"/>
         </LinearLayout>
+        </LinearLayout>
     </LinearLayout>
 
     <CheckBox
         android:id="@+id/filtershow_check_box"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginStart="18dp"
+        android:layout_marginTop="20dp"
         android:textSize="13sp"
         android:text="@string/filtershow_dialog_checkbox" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="2px"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="10dp"
         android:background="#D8D8D8" />
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="110dp"
-        android:layout_marginEnd="14dp">
+        android:layout_marginStart="260dp">
 
         <Button
             android:id="@+id/cancel"
