--- a/res/values/filtershow_strings.xml
+++ b/res/values/filtershow_strings.xml
@@ -410,4 +410,6 @@
     <string name="delete_before_exit">Delete Filter?</string>
     <string name="rename_before_exit">Rename Filter</string>
     <string name="filter_name">Filter name</string>
+    <string name="filter_name_notification">Name cannot be NULL.</string>
+    <string name="filter_name_duplicate">Name already existed, please input another one.</string>
 </resources>
