Make Gallery2 Material Light Orange
 to fit other apps like Contacts, Calculator etc
 
Change-Id: I103f4acefd23c77b9173349e1b962571eb07ba17

--- a/res/values-v21/colors.xml
+++ b/res/values-v21/colors.xml
@@ -15,23 +15,23 @@
 -->
 <resources>
     <!-- configuration for album set page -->
-    <color name="albumset_background">#ff21272b</color>
-    <color name="albumset_placeholder">#37474F</color>
-    <color name="albumset_label_background">#EE37474F</color>
-    <color name="albumset_label_title">#FBFBFB</color>
-    <color name="albumset_label_count">#A9ABAD</color>
+    <color name="albumset_background">#ffffffff</color>
+    <color name="albumset_placeholder">#ffdadada</color>
+    <color name="albumset_label_background">#ccffffff</color>
+    <color name="albumset_label_title">#ff000000</color>
+    <color name="albumset_label_count">#ffa9abad</color>
 
     <!-- configuration for album page -->
-    <color name="album_background">#ff21272b</color>
-    <color name="album_placeholder">#37474F</color>
+    <color name="album_background">#ffffffff</color>
+    <color name="album_placeholder">#ffdadada</color>
 
     <!-- configuration for photo page -->
     <color name="photo_background">#ff21272b</color>
-    <color name="photo_placeholder">#37474F</color>
+    <color name="photo_placeholder">#ffdadada</color>
 
     <!-- configuration for manage cache page -->
     <color name="cache_background">#ff21272b</color>
-    <color name="cache_placeholder">#37474F</color>
+    <color name="cache_placeholder">#ffdadada</color>
 
     <color name="bitmap_screennail_placeholder">#37474F</color>
 
@@ -46,5 +46,9 @@
     <color name="fab">#FF9800</color>
     <color name="floating_action_button_touch_tint">#FFB74D</color>
     <color name="floating_action_button_icon_color">#ffffff</color>
+  
+    <color name="primary">#ffF4511E</color>
+    <color name="primary_dark">#ffE64A19</color>
+    <color name="accent">#ffd6d6d6</color>
 
 </resources>
