--- a/res/menu/photo.xml
+++ b/res/menu/photo.xml
@@ -38,7 +38,7 @@
             android:icon="@drawable/ic_menu_trash"
             android:title="@string/delete"
             android:visible="false"
-            android:showAsAction="never" />
+            android:showAsAction="ifRoom" />
     <item android:id="@+id/action_slideshow"
             android:icon="@drawable/ic_menu_slideshow_holo_light"
             android:title="@string/slideshow"
