--- a/res/values-ne/filtershow_strings.xml
+++ b/res/values-ne/filtershow_strings.xml
@@ -39,7 +39,7 @@
     <string name="x" msgid="6810256999024563662">"x"</string>
     <string name="menu_settings" msgid="6428291655769260831">"सेटिङहरू"</string>
     <string name="unsaved" msgid="8704442449002374375">"यो तस्बिरमा बचत नगरिएका परिवर्तनहरू छन्।"</string>
-    <string name="save_before_exit" msgid="2680660633675916712">"के तपाईँ निस्कनुभन्दा पहिले बचत गर्न चाहनु हुन्छ?"</string>
+    <string name="save_before_exit" msgid="2680660633675916712">"के तपाईं निस्कनुभन्दा पहिले बचत गर्न चाहनु हुन्छ?"</string>
     <string name="save_and_exit" msgid="3628425023766687419">"बचत गरेर निस्कनुहोस्"</string>
     <string name="save_and_processing" msgid="6371565035837463194">"पूर्ण रिजोलुसन चित्र प्रसोधन गर्दै"</string>
     <string name="exit" msgid="242642957038770113">"निकास"</string>
