--- a/res/values-zh-rCN/filtershow_strings.xml
+++ b/res/values-zh-rCN/filtershow_strings.xml
@@ -177,6 +177,8 @@
     <!--  Label for the "negative" dual camera effect  [CHAR LIMIT=15] -->
     <string name="dc_negative">负片</string>
 
+    <string name="blur">"虚化"</string>
+    <string name="motion_blur">"动态虚化"</string>
     <string name="color">滤镜</string>
     <string name="frames">相框</string>
 
@@ -189,10 +191,47 @@
     <string name="watermark_emotions">表情</string>
     <string name="watermark_food">食物</string>
     <!--  True Effect button -->
-    <string name="truescanner">真实扫描仪</string>
+    <string name="truescanner">镜头校正</string>
+    <string name="trueScanner">"镜头校正"</string>
+    <string name="truescanner_normal">"标准"</string>
+    <string name="truescanner_white">"白板"</string>
+    <string name="truescanner_remove_glare">"去除眩光"</string>
     <!--  HazeBuster button -->
     <string name="hazebuster_acts">去雾霾</string>
+    <string name="hazeBuster">"去雾霾"</string>
     <!--  SeeStraight button -->
     <string name="seestraight_acts">正视</string>
-    <string name="trueportrait">真实人像</string>
+    <string name="seeStraight">"正视"</string>
+    <string name="trueportrait">真实肖像</string>
+    <string name="fusion_pick_point">"选择段"</string>
+    <string name="fusion_pick_underlay">"选择垫层"</string>
+    <string name="dualcam_no_segment_toast">"在此处未找到任何段"</string>
+    <string name="dualcam_filter_not_supported">"此图片不支持双相机滤镜"</string>
+    <string name="trueportrait_no_face">"无法对此照片应用真实肖像效果。未检测到面部。"</string>
+    <string name="trueportrait_edit_intro">"使用润色工具，可以编辑前景和背景。您可以使用手指在任何遗漏的前景或背景区域中涂色。"</string>
+    <string name="trueportrait_edit_foreground_toast">"您可以使用手指在任何遗漏的前景区域中涂色。"</string>
+    <string name="trueportrait_edit_background_toast">"您可以使用手指在任何遗漏的背景区域中涂色。"</string>
+    <string name="trueportrait_edit_help">"要进行缩放，请使用双指张合触摸手势。您还可以使用双指拖动图像以重新定位图像。这样可以更轻松地修复任何问题区域。"</string>
+    <string name="trueportrait_fusion_intro">"您的前景肖像可以复制并粘贴到图库中的任意照片上。您可以尝试使用不同的背景照片创建有趣的新肖像照片。"</string>
+    <string name="dualcam_fusion_intro">"可以将您的前景复制并粘贴到图库中的任意照片上。\n\n您可以尝试使用不同的背景照片创建有趣的新肖像照片。"</string>
+    <string name="trueportrait_touch_up">"润色"</string>
+    <string name="fusion_pick_background">"选择背景照片"</string>
+    <string name="ok_continue">"继续"</string>
+    <string name="beautify">"美化"</string>
+    <string name="dualcam">"双摄像头"</string>
+    <string name="foreground">"前景"</string>
+    <string name="background">"背景"</string>
+    <string name="brush_size">"画笔大小"</string>
+    <string name="filtershow_dialog_title">"自定义滤镜"</string>
+    <string name="filtershow_dialog_content">"您可以创建照片滤镜。\n\n选择一张您喜欢的照片，然后将其用作其他照片的滤镜"</string>
+    <string name="filtershow_dialog_original_photo">"原始照片"</string>
+    <string name="filtershow_dialog_apply_photo">"要应用的色彩"</string>
+    <string name="filtershow_dialog_checkbox">"不再显示"</string>
+    <string name="filtershow_preset_title">"自定义"</string>
+    <string name="filtershow_preset_rename">"重命名"</string>
+    <string name="delete_before_exit">"删除滤镜?"</string>
+    <string name="rename_before_exit">"重命名滤镜"</string>
+    <string name="filter_name">"滤镜名称"</string>
+    <string name="filter_name_notification">"名称不能为空。"</string>
+    <string name="filter_name_duplicate">"该名称已存在，请输入其他名称。"</string>
 </resources>
