--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -15,6 +15,7 @@
 -->
 <resources>
     <color name="default_background">#000</color>
+    <color name="ic_launcher_gallery_background">#4285f4</color>
 
     <!-- configuration for album set page -->
     <color name="albumset_background">#1A1A1A</color>
