Fix two message translated to Chinese
add new string value resource

Change-Id: I97190908e1e0c094f542d1e1dcf1639419c27313
CRs-Fixed: 2104926

--- a/res/values-zh-rCN/filtershow_strings.xml
+++ b/res/values-zh-rCN/filtershow_strings.xml
@@ -234,4 +234,8 @@
     <string name="filter_name">"滤镜名称"</string>
     <string name="filter_name_notification">"名称不能为空。"</string>
     <string name="filter_name_duplicate">"该名称已存在，请输入其他名称。"</string>
+
+    <!--Filtershow Toast -->
+    <string name="no_faces_found">未能检测到人脸</string>
+    <string name="image_size_too_small">图片尺寸太小</string>
 </resources>
