Fix unable save image with gif underlay.
reopen pick activity and toast don't support gif extension

Change-Id: I3bb36cb74571ff01cd6b9a8de51a5e5c80ada731
CRs-Fixed: 2104809

--- a/res/values-zh-rCN/filtershow_strings.xml
+++ b/res/values-zh-rCN/filtershow_strings.xml
@@ -238,4 +238,5 @@
     <!--Filtershow Toast -->
     <string name="no_faces_found">未能检测到人脸</string>
     <string name="image_size_too_small">图片尺寸太小</string>
+    <string name="not_support_gif">不支持gif格式的图片，请重新选择</string>
 </resources>
