--- a/res/values-en-rXC/filtershow_strings.xml
+++ b/res/values-en-rXC/filtershow_strings.xml
@@ -157,7 +157,9 @@
     <skip />
     <!-- no translation found for negative (6998313764388022201) -->
     <skip />
-    <string name="none" msgid="6633966646410296520">"‎‏‎‎‎‎‎‏‎‏‏‏‎‎‎‎‎‏‎‎‎‏‎‎‏‎‏‏‏‏‏‎‏‏‎‎‎‏‏‏‏‏‏‎‏‏‎‏‎‎‎‎‏‎‏‏‎‎‎‎‎‏‎‎‏‏‎‎‏‏‏‎‎‎‎‏‎‎‏‏‎‏‎‎‏‎‏‎‎‏‎‏‎‏‎None‎‏‎‎‏‎"</string>
+    <!-- no translation found for none (6633966646410296520) -->
+    <!-- no translation found for none (3601545724573307541) -->
+    <skip />
     <!-- no translation found for edge (7036064886242147551) -->
     <skip />
     <!-- no translation found for kmeans (2080952022674981541) -->
