--- a/res/values-mr/filtershow_strings.xml
+++ b/res/values-mr/filtershow_strings.xml
@@ -31,7 +31,7 @@
     <string name="show_imagestate_panel" msgid="281932769701043015">"लागू केलेले प्रभाव दर्शवा"</string>
     <string name="hide_imagestate_panel" msgid="7207643485811695257">"लागू केलेले प्रभाव लपवा"</string>
     <string name="export_image" msgid="3202835713172222134">"निर्यात"</string>
-    <string name="print_image" msgid="1942989216591621413">"मुद्रण करा"</string>
+    <string name="print_image" msgid="1942989216591621413">"प्रिंट करा"</string>
     <string name="export_flattened" msgid="9046192331465915411">"सपाट केलेली इमेज निर्यात करा"</string>
     <string name="select_output_settings" msgid="1268532018080310748">"निर्यात केलेली इमेज इतिहासाशिवाय एक प्रतिलिपी असेल."</string>
     <string name="quality" msgid="179292110309050529">"गुणवत्ता"</string>
