--- a/res/values-my/filtershow_strings.xml
+++ b/res/values-my/filtershow_strings.xml
@@ -126,7 +126,7 @@
     <string name="color_pick_select" msgid="734312818059057394">"မိမိစိတ်ကြိုက်အရောင်းရွေးရန်"</string>
     <string name="color_pick_title" msgid="6195567431995308876">"အရောင်ရွေးရန်"</string>
     <string name="draw_size_title" msgid="3121649039610273977">"အရွယ်အစားရွေးရန်"</string>
-    <string name="draw_size_accept" msgid="6781529716526190028">"အိုကေ"</string>
+    <string name="draw_size_accept" msgid="6781529716526190028">"OK"</string>
     <string name="state_panel_original" msgid="9069584409934164419">"မူလ"</string>
     <string name="state_panel_result" msgid="318640531123298676">"ရလဒ်"</string>
     <string name="filtershow_notification_label" msgid="1653168445525855247">"ပုံသိမ်းဆည်းနေစဉ်"</string>
